--- a/pb_tool.cfg
+++ b/pb_tool.cfg
@@ -44,7 +44,7 @@ name: avaframeConnector
 # Full path to where you want your plugin directory copied. If empty,
 # the QGIS default path will be used. Don't include the plugin name in
 # the path.
-plugin_path: ~/.local/share/QGIS/QGIS3/profiles/default/python/plugins
+plugin_path: /home/felix/.local/share/QGIS/QGIS3/profiles/default/python/plugins
 
 [files]
 # Python  files that should be deployed with the plugin
@@ -64,7 +64,7 @@ extras: metadata.txt
 
 # Other directories to be deployed with the plugin.
 # These must be subdirectories under the plugin directory
-extra_dirs:
+extra_dirs: QGisStyles
 
 # ISO code(s) for any locales (translations), separated by spaces.
 # Corresponding .ts files must exist in the i18n directory
