Add script to rename layers within QGis with parameter values

--- a/pb_tool.cfg
+++ b/pb_tool.cfg
@@ -48,7 +48,10 @@ plugin_path: /home/felix/.local/share/QGIS/QGIS3/profiles/default/python/plugins
 
 [files]
 # Python  files that should be deployed with the plugin
-python_files: __init__.py avaframeConnector.py avaframeConnector_provider.py avaframeConnector_algorithm.py 
+python_files: __init__.py avaframeConnector.py avaframeConnector_provider.py 
+              avaframeConnector_algorithm.py 
+              avaframeLayerRename_algorithm.py 
+
 
 # The main dialog file that is loaded (not compiled)
 main_dialog: 
