Add get version script
  - Add com1DFA script, Rename and refactor operational
  - partly addresses #16

--- a/pb_tool.cfg
+++ b/pb_tool.cfg
@@ -51,6 +51,8 @@ plugin_path: /home/felix/.local/share/QGIS/QGIS3/profiles/default/python/plugins
 python_files: __init__.py avaframeConnector.py avaframeConnector_provider.py 
               avaframeConnector_algorithm.py 
               avaframeLayerRename_algorithm.py 
+              avaframeGetVersion_algorithm.py 
+              avaframeRunCom1DFA_algorithm.py
 
 
 # The main dialog file that is loaded (not compiled)
