Adds automatic avaframe installation on plugin installation
  - currently needs a QGis reboot after succesfull plugin installation
  - works on some windows OS...

--- a/pb_tool.cfg
+++ b/pb_tool.cfg
@@ -53,6 +53,7 @@ python_files: __init__.py avaframeConnector.py avaframeConnector_provider.py
               avaframeLayerRename_algorithm.py 
               avaframeGetVersion_algorithm.py 
               avaframeRunCom1DFA_algorithm.py
+              avaframeConnector_commonFunc.py 
 
 
 # The main dialog file that is loaded (not compiled)
