Add pytest for commonFunc; add github action
  - add pep8speaks config

--- a/pb_tool.cfg
+++ b/pb_tool.cfg
@@ -52,6 +52,7 @@ python_files: __init__.py avaframeConnector.py avaframeConnector_provider.py
               avaframeConnector_algorithm.py 
               avaframeLayerRename_algorithm.py 
               avaframeGetVersion_algorithm.py 
+              avaframeUpdate_algorithm.py 
               avaframeRunCom1DFA_algorithm.py
               avaframeConnector_commonFunc.py 
 
