Add Glide Snow in experimental
  - Start renaming of modules

--- a/pb_tool.cfg
+++ b/pb_tool.cfg
@@ -54,6 +54,7 @@ python_files: __init__.py avaframeConnector.py avaframeConnector_provider.py
               avaframeGetVersion_algorithm.py 
               avaframeUpdate_algorithm.py 
               avaframeRunCom1DFA_algorithm.py
+              avaframeRunGlideSnow_algorithm.py
               avaframeConnector_commonFunc.py 
 
 
