--- a/pb_tool.cfg
+++ b/pb_tool.cfg
@@ -55,6 +55,8 @@ python_files: __init__.py avaframeConnector.py avaframeConnector_provider.py
               avaframeUpdate_algorithm.py 
               avaframeRunCom1DFA_algorithm.py
               avaframeRunGlideSnow_algorithm.py
+              avaframeGlideSnowConvert_algorithm.py
+              avaframeRunAna4ProbRun_algorithm.py
               avaframeConnector_commonFunc.py 
 
 
