Add something to filename
  - Add secRel info to scenarioname
  - Add secRel handling to the operational run

--- a/pb_tool.cfg
+++ b/pb_tool.cfg
@@ -50,11 +50,11 @@ plugin_path: /home/felix/.local/share/QGIS/QGIS3/profiles/default/python/plugins
 # Python  files that should be deployed with the plugin
 python_files: __init__.py avaframeConnector.py avaframeConnector_provider.py 
               avaframeConnector_algorithm.py 
-              avaframeLayerRename_algorithm.py 
-              avaframeGetVersion_algorithm.py 
-              avaframeUpdate_algorithm.py 
-              avaframeRunCom1DFA_algorithm.py
-              avaframeRunGlideSnow_algorithm.py
+              layerRename_algorithm.py 
+              getVersion_algorithm.py 
+              update_algorithm.py 
+              runCom1DFA_algorithm.py
+              runCom5GlideSnow_algorithm.py
               avaframeGlideSnowConvert_algorithm.py
               avaframeRunAna4ProbRun_algorithm.py
               avaframeConnector_commonFunc.py 
