--- a/.github/workflows/runTestSinglePython.yml
+++ b/.github/workflows/runTestSinglePython.yml
@@ -27,6 +27,8 @@ jobs:
       run: |
         python -m pip install  --upgrade pip
         pip install flake8 pytest pytest-cov
+        pip install pandas
+        pip install avaframe
     # This compilation is necessary to have the .c file for the next step
     # Alternative is to include the .c file in the repo
     - name: Lint with flake8
