add experimental com6 (no real module, but start)

--- a/pb_tool.cfg
+++ b/pb_tool.cfg
@@ -54,6 +54,7 @@ python_files: __init__.py avaframeConnector.py avaframeConnector_provider.py
               getVersion_algorithm.py 
               update_algorithm.py 
               runCom1DFA_algorithm.py
+              runCom6Fois_algorithm.py
               runCom2AB_algorithm.py
               runCom5SnowSlide_algorithm.py
               runAna4ProbAna_algorithm.py
