--- a/pb_tool.cfg
+++ b/pb_tool.cfg
@@ -56,6 +56,7 @@ python_files: __init__.py avaframeConnector.py avaframeConnector_provider.py
               runCom1DFA_algorithm.py
               runCom2AB_algorithm.py
               runAna4ProbAna_algorithm.py
+              runAna4ProbDirOnly_algorithm.py
               runCom5SnowSlide_algorithm.py
               runCom6RockAvalanche_algorithm.py
               runIn1RelInfo_algorithm.py
