fix license file to meet qgis plugin requirements

--- a/pb_tool.cfg
+++ b/pb_tool.cfg
@@ -73,7 +73,7 @@ compiled_ui_files:
 resource_files: 
 
 # Other files required for the plugin
-extras: metadata.txt icon.png LICENSE.txt
+extras: metadata.txt icon.png LICENSE
 
 # Other directories to be deployed with the plugin.
 # These must be subdirectories under the plugin directory
