--- a/pb_tool.cfg
+++ b/pb_tool.cfg
@@ -57,6 +57,7 @@ python_files: __init__.py avaframeConnector.py avaframeConnector_provider.py
               runCom2AB_algorithm.py
               runCom5SnowSlide_algorithm.py
               runCom6RockAvalanche_algorithm.py
+              runCom8MoTPSA_algorithm.py
               runAna4ProbAna_algorithm.py
               runAna4ProbDirOnly_algorithm.py
               runAna5DFAPathGeneration_algorithm.py
